# eresma

./: Cargo.toml  README.md
.github/workflows/: test.yml
roms/: draw-with-keyboard.rom  draw-with-keyboard.tal  hello-keyboard.rom  hello-keyboard.tal  hello-line.tal  hello-pixel.rom  hello-pixels.rom  hello-sprite.rom  hello.tal
src/: devices.rs  main.rs  stack.rs
